# TempHist-API

./: .gitattributes  .gitignore  AGENTS.md  ANALYTICS_IMPROVEMENTS.md  ASYNC_JOBS_TROUBLESHOOTING.md  CACHING_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE_SECURITY_AUDIT_REPORT.md  CLOUDFLARE_OPTIMIZATION.md  COMPREHENSIVE_SECURITY_AUDIT.md  COST_OPTIMIZATION.md  CURRENT_YEAR_COVERAGE_FIX.md  CURRENT_YEAR_DEBUGGING.md  CURSOR_SECURITY_AUDIT_REPORT.md  DEBUG_CURRENT_YEAR_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  IMPROVED_CACHING_IMPLEMENTATION.md  LOGGING_GUIDE.md  MIGRATION_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PROFILING_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_MIGRATION.md  RATE_LIMITING_SERVICE_JOBS.md  README.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  SECURITY_AUDIT_REPORT.md  TESTING_GUIDE.md  TEST_FIXES_SUMMARY.md  TROUBLESHOOTING.md  WORKER_MIGRATION.md  admin_clear_queue.py  analytics_storage.py  background_worker.py  bump_version.py  cache_utils.py  check_worker_status.py  (+35 more)
.postman/: resources.yaml
app/: cache_utils.py
benchmarks/: compare_apis.py  results.csv  results_cold.csv  results_final.csv  results_final_raw.csv  results_raw.csv
cache/: __init__.py  accessors.py  core.py  keys.py  warming.py
data/: preapproved_locations.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
jobs/: __init__.py  manager.py
middleware/: __init__.py  auth.py  cors.py  logging.py  request_id.py  request_size.py  security.py
postman/collections/Development/: Analytics summary.request.yaml  Async weekly.request.yaml  Berlin job worker.request.yaml  Cache warm locations.request.yaml  Cache warm status.request.yaml  Clear cache.request.yaml  Clear job queue.request.yaml  Daily endpoint.request.yaml  Daily.request.yaml  Health.request.yaml  Home.request.yaml  Job Singapore.request.yaml  Location search.request.yaml  Share image.request.yaml  (+11 more)
postman/environments/: Development-1.environment.yaml  Development.environment.yaml  Local.environment.yaml  Production.environment.yaml  Staging.environment.yaml
railway/: RAILWAY_DEPLOYMENT.md  README.md  check_worker_status.py  debug_jobs.py  export_env_vars.py  import_to_staging.sh  migrate_env_vars.sh  railway_export_simple.sh
routers/: _responses.py  analytics.py  cache.py  dependencies.py  health.py  jobs.py  legacy.py  locations.py  locations_preapproved.py  og_image.py  records_agg.py  root.py  shares.py  stats.py  v1_records.py  weather.py
tests/: conftest.py  test_admin_auth.py  test_analytics_storage_batched.py  test_app_check.py  test_async_jobs_integration.py  test_batch_fetch_performance.py  test_dedup_realistic.py  test_deduplication.py  test_enqueue_backfill_and_collect_ranges.py  test_job_dedup.py  test_job_worker.py  test_main.py  test_narrow_year_recompute.py  test_temporal_cache.py  test_vc_api.py  test_worker_service.py
tests/cache/: test_cache_stats.py  test_legacy_slug_fallback.py  test_warming_sessions.py  test_warming_tiers.py
tests/routers/: __init__.py  test_analytics.py  test_health.py  test_locations.py  test_locations_preapproved.py  test_records_agg.py  test_shares.py  test_v1_records_cold_fetch.py  test_v1_records_temporal_unit_cache.py  test_v1_records_timezone_population.py
tests/tracking/: test_usage.py
tests/utils/: test_daily_temperature_cache.py  test_get_temperature_series_mget.py  test_location_canonicalization.py  test_metro_cache_snap.py  test_open_meteo_client.py  test_open_meteo_stats.py  test_path_parsing.py  test_resolve_cache_slug.py  test_temperature_calculations.py  test_visual_crossing_client.py
tracking/: __init__.py  usage.py
utils/: __init__.py  admin_auth.py  cache_headers.py  daily_temperature_store.py  firebase.py  ip_utils.py  location_validation.py  open_meteo_client.py  open_meteo_stats.py  path_parsing.py  redis_client.py  sanitization.py  share_store.py  temperature.py  validation.py  vc_budget.py  visual_crossing_client.py  visual_crossing_timeline.py  weather.py  weather_data.py  weather_provider.py  weather_types.py
(+139 files in other folders)
