[project]
name = "temphist-api"
version = "1.3.5"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:.*deprecated.*:DeprecationWarning:matplotlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",    # Style errors and warnings
    "F",         # Flakes (unused variables/imports)
    "I",         # Organise imports automatically
    "ASYNC",     # Catches missing FastAPI 'await' calls
    "S",         # Security (catches hardcoded AI passwords/keys)
]
ignore = [
    "E501",      # Line too long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # assert is idiomatic in pytest
"utils/daily_temperature_store.py" = ["S608"]  # SQL uses only controlled internal column names, not user input