[project]
name = "temphist-api"
version = "1.4.6"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.14.0",
    "anyio>=4.4.0",
    "asyncpg==0.29.0",
    "fastapi==0.120.4",
    "firebase-admin==6.6.0",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "matplotlib>=3.11.0",
    "pycountry==26.2.16",
    "timezonefinder==5.2.0",
    "pydantic==2.12.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "redis==7.0.1",
    "requests>=2.32.4",
    "uvicorn==0.38.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore:.*deprecated.*:DeprecationWarning:matplotlib",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",    # Style errors and warnings
    "F",         # Flakes (unused variables/imports)
    "I",         # Organise imports automatically
    "ASYNC",     # Catches missing FastAPI 'await' calls
    "S",         # Security (catches hardcoded AI passwords/keys)
]
ignore = [
    "E501",      # Line too long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # assert is idiomatic in pytest
"utils/daily_temperature_store.py" = ["S608"]  # SQL uses only controlled internal column names, not user input
